--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,306 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+
+/* general */
+
+.container {
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 20px;
+}
+.flex {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.flex2 {
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-start;
+}
+.flex3 {
+  display: flex;
+  align-items: center;
+}
+.flex4 {
+  display: flex;
+  align-items: flex-start;
+}
+
+input:required {
+  border: 1px solid blue;
+}
+
+input:valid {
+  border: 1px solid green;
+}
+input:invalid {
+  border: 1px solid red;
+}
+
+/* header */
+.header {
+  box-shadow: 1px 0 8px;
+}
+.logo {
+  height: 56px;
+  width: 56px;
+}
+.searchbar {
+  width: 600px;
+  height: 2rem;
+  border-radius: 1rem;
+  border: 1px solid grey;
+}
+.signupHeader {
+  padding: 0.8rem 2rem;
+  /* border: 1px solid black; */
+  margin: 0 1rem;
+  background: rgb(79, 186, 104);
+  color: #fff;
+  border-radius: 8px;
+}
+
+/* filter */
+.filter {
+  margin: 2rem 0;
+}
+
+/* questions */
+.questionMain {
+  width: 75%;
+}
+.question {
+  padding: 20px;
+  border-radius: 10px;
+  margin: 2rem 0;
+  box-shadow: 0.5px 0.5px 3px;
+}
+.question:hover {
+  background: rgb(241, 237, 237);
+  box-shadow: 1px 1px 6px;
+  cursor: pointer;
+}
+.questionText {
+  padding: 0 1rem;
+}
+
+.reply {
+  font-size: 0.7rem;
+}
+.questionHeading {
+  margin-top: 0;
+}
+/* comment */
+.commentUserPicture {
+  width: 32px;
+  height: 32px;
+}
+.commentPicture {
+  width: 18px;
+  height: 18px;
+  margin-right: 1rem;
+}
+/* navlink */
+.navlink {
+  margin: 2rem 0 2rem 2rem;
+}
+
+.addNew {
+  background: rgb(74, 77, 255);
+  width: 100%;
+  padding: 1rem 3rem;
+  border-radius: 8px;
+  color: #fff;
+  border: none;
+  font-size: 1rem;
+}
+.addNew:hover {
+  background-color: rgb(31, 33, 187);
+  cursor: pointer;
+}
+
+/* login */
+.loginImage {
+  height: 75vh;
+  margin-top: 10px;
+}
+.signupImage {
+  height: 80vh;
+}
+
+.loginForm {
+  border: 1px solid blanchedalmond;
+  padding: 1rem;
+  margin-top: 4rem;
+  margin-right: 5rem;
+  width: 300px;
+  border-radius: 8px;
+}
+.signupForm {
+  border: 1px solid rgb(161, 122, 148);
+  padding: 1rem;
+  margin-top: 1rem;
+  margin-right: 5rem;
+  width: 300px;
+  border-radius: 8px;
+}
+
+.username,
+.email,
+.password {
+  display: block;
+  margin: 0.75rem 0 1.2rem 0;
+  height: 2.5rem;
+  background: rgb(194, 223, 238);
+  border: none;
+  width: 100%;
+  border-radius: 5px;
+}
+#submit {
+  height: 2.5rem;
+  width: 30%;
+  margin-bottom: 1rem;
+  margin-top: 1rem;
+  background: rgb(79, 186, 104);
+  border: none;
+  border-radius: 5px;
+}
+.submit {
+  padding: 1rem 3rem;
+  background: rgb(79, 186, 104);
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  font-size: 1rem;
+  color: #fff;
+}
+.submit:hover {
+  background: rgb(62, 148, 82);
+}
+
+/* add question */
+.addQuestionForm {
+  width: 50%;
+  /* margin: 0 auto; */
+}
+.addTitle {
+  display: block;
+  width: 100%;
+  margin: 0.75rem 0 1.2rem 0;
+  height: 2.5rem;
+  background: rgb(194, 223, 238);
+  border: none;
+  width: 100%;
+  border-radius: 5px;
+}
+.addDescription {
+  display: block;
+  height: 200px;
+  width: 100%;
+  margin: 0.75rem 0 1.2rem 0;
+  background: rgb(194, 223, 238);
+  border: none;
+  width: 100%;
+  border-radius: 5px;
+}
+.addQuestionImage {
+  width: 40%;
+  margin-top: 20px;
+}
+
+/* answer */
+.answer {
+  border-bottom: 1px solid rgb(182, 182, 182);
+}
+
+/* question detail */
+.bookmark {
+  height: 32px;
+  cursor: pointer;
+  margin-top: 2rem;
+  position: relative;
+  left: 1.5rem;
+}
+.bookmark:onclick {
+  background-color: red;
+}
+.question-detail {
+  border: 1px solid blanchedalmond;
+  background: blanchedalmond;
+  padding: 1rem;
+  border-radius: 8px;
+  box-shadow: 1px 1px 5px blanchedalmond;
+}
+.question-detail h1 {
+  margin-bottom: 0;
+  color: rgb(88, 88, 88);
+}
+.question-detail h3 {
+  margin-bottom: 0;
+  color: rgb(88, 88, 88);
+}
+
+.question-detail button {
+  background: rgb(79, 186, 104);
+  margin-left: 1rem;
+  cursor: pointer;
+  border: 0;
+  padding: 5px 10px;
+  border-radius: 4px;
+}
+.question-detail button:hover {
+  background: rgb(62, 148, 82);
+}
+.question-description,
+.answer-description {
+  font-size: 1.3rem;
+  font-weight: 400;
+  line-height: 1.5;
+}
+
+.question-creator,
+.answer-creator {
+  margin-bottom: 0;
+  font-size: 0.8rem;
+  padding-right: 2rem;
+  color: rgb(107, 107, 107);
+}
+
+/* answer section */
+
+.answer-detail button {
+  background: rgb(79, 186, 104);
+  margin-left: 1rem;
+  cursor: pointer;
+  border: 0;
+  padding: 5px 10px;
+  border-radius: 4px;
+}
+.answer-detail button:hover {
+  background: rgb(62, 148, 82);
+}
+.like {
+  height: 32px;
+  cursor: pointer;
+  margin-top: 2rem;
+  position: relative;
+  right: 2.5rem;
+}
+.answer {
+  margin-left: -1rem;
+}
+.answer-box {
+  width: 100%;
 }
